# citizen-template

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CICD_HANDOFF.md  CITIZEN_TEMPLATE_IMPROVEMENT_PLAN.md  CORPORATE_INTEGRATION.md  README.md  WINDOWS_TEST_HARNESS_PLAN.md  pyproject.toml
.agents/skills/citizen-app/: LEARNINGS.md  SKILL.md
.agents/skills/citizen-app/agents/: openai.yaml
.agents/skills/citizen-app/assets/dockerfiles/: Dockerfile.job  (+2 more)
.agents/skills/citizen-app/scripts/: build.py  container.py  preflight.py  preview.py  project.py  state.py  validate.py
.agents/skills/citizen-app/stages/: 01-scaffold.md  02-choose-type.md  03-interview.md  04-plan-review.md  05-build.md  06-preview.md  07-user-review.md  08-validate.md  09-containerize.md  10-local-ready.md  10-ship.md  11-ship.md
.claude/: settings.json
.claude/skills/citizen-app/: SKILL.md
.claude/skills/citizen-app/scripts/: state.py  validate.py
.claude/skills/citizen-app/stages/: 01-scaffold.md  02-choose-type.md  03-interview.md  04-plan-review.md  05-build.md  06-validate.md  07-containerize.md  07-preview.md  08-containerize.md  08-ship.md  09-ship.md
_tmpl_check/: present.py  ui.py
src/app/: __init__.py
src/app/data/: __init__.py  base.py  bonds.py  stocks.py  summary.py
tests/: test_data.py  test_preflight.py  test_preview.py  test_project.py  test_repo_contract.py  test_smoke.py  test_state.py  test_summary.py  test_windows_harness.py
tools/windows-harness/: bootstrap.ps1  collect.py  harness.py  prepare.py  run-scenario.ps1  scenario.py  tool-manifest.json
(+10 files in other folders)
