# The [project] name is rewritten to the repo slug by the citizen-app scaffold
# stage. The import package stays `app` so no code ever needs renaming.
[project]
name = "citizen-app-template"
version = "0.1.0"
description = "A citizen-developer application"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "ruff",
    "basedpyright",
    "pre-commit",
    "pytest",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
# Basic mode: catches real bugs without burying a new app in strictness noise.
typeCheckingMode = "basic"
pythonVersion = "3.11"
include = ["src", "tests", ".agents/skills/citizen-app/scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src", ".agents/skills/citizen-app/scripts"]

[tool.coverage.report]
show_missing = true
